# mochi-mochi

./: .gitignore  CLAUDE.md  README.md  TODO.txt  main.py  pyproject.toml  sample_upload.md  test_faiss_import.py  test_main.py
tasks/: __init__.py  grade_accuracy.py  rewrite_answer.py
tests/: __init__.py  test_main.py
